--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -4,9 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ProductDetail</title>
+    <link rel="stylesheet" href="/css/ProductDetailStyles.css">
+    <script src="https://kit.fontawesome.com/4233ea3642.js" crossorigin="anonymous"></script>
+    
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <img src="/images/TechLAndV2.1.png" alt="logo de la empresa">
+        </div>
+        <div class="burger-menu">
+            <i class="fas fa-bars"></i>                  
+        </div>
+    </header>
+
+    <main>
+        <section class="main-section-product">
+            <header class="product-name"><h1>Nombre del producto</h1></header>
+            <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+            </div>
+        </section>
+
+        <article class="product-card">
+              <div class="image-product">
+            <img src="/images/gabriel-beaudry-5X5dCf4Pp44-unsplash.jpg" alt="product-preview">
+        </div>
+        </article>
+
+      
+
+    </main>
+
+    <footer></footer>
+
     
 </body>
 </html>
