--- a/views/register.html
+++ b/views/register.html
@@ -6,40 +6,54 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
     <!-- <link href = "/css/normalize.css" rel = stylesheet> -->
-    <link href="/css/styles.css" rel=stylesheet>
+    <link href="/css/register.css" rel=stylesheet>
     <title>Crear cuenta</title>
 </head>
 <body>
     <header>
+        <div><img src="/images/TechLAndV2-White.png" alt="logo de la empresa" class="logo"></div>
+        <ul class="navbar">
+            <li><a href="#" class="firsttab">Tienda</a></li>
+            <li><a href="#" class="secondtab">Más vendidos</a></li>
+            <li><a href="#" class="thirdtab">Soporte</a></li>
+        </ul>
     </header>
     <main>
         <h1>Registro de nuevo usuario</h1>
-        <h2>¡Regístrate!</h2>
-        <h2>Ingresa a tu cuenta</h2>
-        <div> 
-            <p>Nombre</p>
-            <input size="20px" type="text" class="input" id="fname" name="first-name" placeholder="Nombre" > 
-        </div>
-        <div> <input size="20px" type="text" class="input" id="fname" name="last-name" placeholder="Apellido" > </div>
-        <div> <input size="20px" type="text" class="input" id="fname" name="email-address" placeholder="Correo electrónico" > </div>
-        <div> <input size="20px" type="text" class="input" id="fname" name="password" placeholder="Contraseña" > </div>
-        <i class="fas fa-search"></i>
-        <h3>Seguridad de contraseña</h3>
-        <div> <input type="checkbox"> Deseo recibir ofertas y promociones de parte de TechLand.com por correo</div>
-        <div> <input type="checkbox"> Deseo recibir ofertas y promociones de parte de TechLand.com por correo</div>
-        <button type="button"> Registrar > </button>
+        <article class="tabs">
+            <div class="register"><h2 >¡Regístrate!</h2></div>
+            <div class="login"><h2 >Ingresa a tu cuenta</h2></div>
+        </article>
+
+        <section>
+            <article class="fullname">
+                <div> 
+                    <!-- <p>Nombre</p> -->
+                    <input type="text" class="input" id="fname" name="first-name" placeholder="Nombre" > 
+                </div>
+                <div> <input type="text" class="input" id="fname" name="last-name" placeholder="Apellido" > </div>
+            </article>
+            <div> <input size="20px" type="text" class="input" id="fname" name="email-address" placeholder="Correo electrónico" > </div>
+            <div> <input size="20px" type="text" class="input" id="fname" name="password" placeholder="Contraseña" > </div>
+            <i class="fas fa-search"></i>
+            <h3>Seguridad de contraseña</h3>
+            <div> <input type="checkbox"> Deseo recibir ofertas y promociones de parte de TechLand.com por correo</div>
+            <div> <input type="checkbox"> Deseo recibir ofertas y promociones de parte de TechLand.com por correo</div>
+            <button type="button"> Registrar > </button>
+        </section>
     </main>
+
     <footer>
         <nav>
-            <ul class="bullet">
+            <ul class="navbar">
                 <li><a href="#">Conócenos</a></li>
                 <li><a href="#">Cuenta</a></li>
                 <li><a href="#">Mi pedido</a></li>
             </ul>
         
-        <div><img src="/images/TechLAndV2.1.png" alt="logo de la empresa" height="50px"></div>
+        <div><img src="/images/TechLAndV2.2.png" class="logo" alt="logo de la empresa"></div>
         
-            <ul class="bullet">
+            <ul class="navbar">
                 <li><a href="#">Contáctanos</a></li>
                 <li><a href="#">Servicios</a></li>
                 <li><a href="#">Ayuda e información</a></li>
