Home has been created.
Styles were added and the size of the logo was modified

--- a/views/home.html
+++ b/views/home.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="es-mx">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/homeStyles.css" />
+    <script
+      src="https://kit.fontawesome.com/4233ea3642.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Welcome to "Tech Land"!</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <div class="header-top">
+        <div class="container-logo">
+          <img
+            src="/images/TechLandV2.png"
+            class="tech-land-logo"
+            alt="tech-land-logo"
+          />
+        </div>
+
+        <div class="search-box">
+          <input
+            type="text"
+            name="search"
+            id="search"
+            placeholder="Search for anything"
+          /><button class="button-search">
+            <i class="fab fa-searchengin fa-lg"></i>
+          </button>
+        </div>
+        <div class="options">
+          <input type="button" name="login" value="Login" />
+        </div>
+      </div>
+      <nav></nav>
+    </header>
+
+    <main></main>
+
+    <footer></footer>
+  </body>
 </html>
