--- a/views/register.html
+++ b/views/register.html
@@ -11,12 +11,28 @@
 </head>
 <body>
     <header>
-        <div><img src="/images/TechLAndV2-White.png" alt="logo de la empresa" class="logo"></div>
-        <ul class="navbar">
-            <li><a href="#" class="firsttab">Tienda</a></li>
-            <li><a href="#" class="secondtab">Más vendidos</a></li>
-            <li><a href="#" class="thirdtab">Soporte</a></li>
-        </ul>
+        <article>
+            <img src="/images/TechLAndV2-White.png" alt="logo de la empresa" class="logo">
+            <ul class="navbar">
+                <li><a href="#" class="firsttab">Tienda</a></li>
+                <li><a href="#" class="secondtab">Más vendidos</a></li>
+                <li><a href="#" class="thirdtab">Soporte</a></li>
+            </ul>
+            <div>Espacio</div>
+        </article>
+
+        <section>
+            
+                <div class="line-first"></div>
+                <div class="line-second"></div>
+                <div class="line-third"></div>
+            
+            <article class="circle">
+                <div class="circle-one"><i class="fas fa-circle-notch"></i></div>
+                <div class="circle-second"><i class="fas fa-circle-notch"></i></div>
+                <div class="circle-third"><i class="fas fa-circle-notch"></i></div>
+            </article>
+        </section>
     </header>
     <main>
         <h1>Registro de nuevo usuario</h1>
@@ -51,7 +67,7 @@
                 <li><a href="#">Mi pedido</a></li>
             </ul>
         
-        <div><img src="/images/TechLAndV2.2.png" class="logo" alt="logo de la empresa"></div>
+            <img src="/images/TechLAndV2-White.png" class="logo" alt="logo de la empresa">
         
             <ul class="navbar">
                 <li><a href="#">Contáctanos</a></li>
