--- a/views/register.html
+++ b/views/register.html
@@ -18,15 +18,20 @@
                 <li><a href="#" class="secondtab">Más vendidos</a></li>
                 <li><a href="#" class="thirdtab">Soporte</a></li>
             </ul>
-            <div>Espacio</div>
+            <div class="input-search">
+                <input type="text" class="search" id="fname" name="fname" placeholder="Buscar..." > 
+                <i class="fas fa-search"></i>
+            </div>
+            <div class="profile"><i class="fas fa-user fa-2x"></i> 
+                <i class="fas fa-cart-plus fa-2x"></i> </div>
         </article>
 
         <section>
-            
+            <div class="lines">
                 <div class="line-first"></div>
                 <div class="line-second"></div>
                 <div class="line-third"></div>
-            
+            </div>
             <article class="circle">
                 <div class="circle-one"><i class="fas fa-circle-notch"></i></div>
                 <div class="circle-second"><i class="fas fa-circle-notch"></i></div>
