--- a/views/home.html
+++ b/views/home.html
@@ -11,6 +11,7 @@
     ></script>
     <title>Welcome to "Tech Land"!</title>
   </head>
+
   <body>
     <header>
       <div class="header-top">
@@ -33,13 +34,40 @@
           </button>
         </div>
         <div class="options">
-          <input type="button" name="login" value="Login" />
+            <i class="fas fa-shopping-cart fa-3x"></i>
         </div>
       </div>
-      <nav></nav>
+      <nav class="header-nav">
+          <ul class="service-options">
+              <li><a href="#">Novedades</a></li>
+              <li><a href="#">Productos destacados</a></li>
+              <li><a href="#">Favoritos</a></li>
+              <li><a href="#">Centro de información</a></li>
+          </ul>
+          <ul class="user-options">
+              <li><button>login</button></li>
+              <li><button>sign up</button></li>
+          </ul>
+      </nav>
     </header>
+    <div class="banner">
+      <img src="/images/banner1.jpg" alt="banner1">
+    </div>
+    <main>
+      <section class="featuredProducts">
+        <article></article>
+        <article></article>
+        <article></article>
+        <article></article>
+      </section>
 
-    <main></main>
+      <section class="promotionalProducts">
+        <article></article>
+        <article></article>
+        <article></article>
+        <article></article>
+      </section> 
+    </main>
 
     <footer></footer>
   </body>
