Added the rollout feature of the bar menu for mobile devices.

--- a/views/home.html
+++ b/views/home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/homeStyles.css" />
+    <script type="text/javascript" src="/js/home.js"></script>
     <script
       src="https://kit.fontawesome.com/4233ea3642.js"
       crossorigin="anonymous"
@@ -34,25 +35,29 @@
           </button>
         </div>
         <div class="options">
-            <i class="fas fa-shopping-cart fa-3x"></i>
+          <i class="fas fa-shopping-cart fa-3x"></i>
         </div>
       </div>
       <nav class="header-nav">
-          <ul class="service-options">
-              <li><a href="#">Novedades</a></li>
-              <li><a href="#">Productos destacados</a></li>
-              <li><a href="#">Favoritos</a></li>
-              <li><a href="#">Centro de información</a></li>
-          </ul>
-          <ul class="user-options">
-              <li><button>login</button></li>
-              <li><button>sign up</button></li>
-          </ul>
+        <ul class="service-options">
+          <li><a href="#">Novedades</a></li>
+          <li><a href="#">Productos destacados</a></li>
+          <li><a href="#">Favoritos</a></li>
+          <li><a href="#">Centro de información</a></li>
+        </ul>
+        <ul class="user-options">
+          <li><button>login</button></li>
+          <li><button>sign up</button></li>
+        </ul>
       </nav>
+      <div class="container-barMenu">
+        <i class="fas fa-bars barMenu fa-lg"></i>
+      </div>
+      <div class="banner">
+        <img src="/images/banner1.jpg" alt="banner1" />
+      </div>
     </header>
-    <div class="banner">
-      <img src="/images/banner1.jpg" alt="banner1">
-    </div>
+
     <main>
       <section class="featuredProducts">
         <article></article>
@@ -66,7 +71,7 @@
         <article></article>
         <article></article>
         <article></article>
-      </section> 
+      </section>
     </main>
 
     <footer></footer>
