--- a/public/css/homeStyles.css
+++ b/public/css/homeStyles.css
@@ -1,100 +1,127 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    color: black;    
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  color: black;
 }
-body{
-    background-color: #0e948d;
-}
-
-header{
-    background-color: white;
+body {
+  background-color: #0e948d;
 }
 
-.header-top{
-display: flex;
-flex-wrap: wrap;
-justify-content: space-around;
-padding: 10px;
-background-color: rgba(0, 0, 0, .75)
+header {
+  background-color: white;
 }
 
-.container-logo{
-    display: flex;
-    align-self: center;
-    justify-content: center;
+.header-top {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 1);
 }
 
-.tech-land-logo{
-    width: 180px;
-    height:22px;
+.container-logo {
+  display: flex;
+  align-self: center;
+  justify-content: center;
 }
 
-
-.search-box{
-    width: 50%;
-    display: flex;
-    align-self: center;
-    justify-content: space-evenly;
+.tech-land-logo {
+  width: 180px;
+  height: 22px;
 }
 
-.options{
-    display: flex;  
-    justify-content: center;
-}
-#search{
-    width: 85%;
-}
-
-.button-search{
-   padding: 2px; 
-   
+.search-box {
+  width: 50%;
+  display: flex;
+  align-self: center;
+  justify-content: space-evenly;
 }
 
-.fa-searchengin{
-    color: #0e948d;
+.options {
+  display: flex;
+  justify-content: center;
+}
+#search {
+  width: 85%;
 }
 
-.header-nav{
-    padding: 10px;
-}
-.header-nav, ul{
-    display: flex;
+.button-search {
+  padding: 2px;
 }
 
-ul.service-options{
-    width: 70%;
-    justify-content: space-evenly;
-    list-style: none;
-    flex-wrap: wrap;
-
+.fa-searchengin {
+  color: #0e948d;
 }
 
-ul.user-options{
-    width: 30%;
-    list-style: none;
-    justify-content:stretch;
-    flex-wrap: wrap;
+.header-nav {
+  padding: 10px;
+}
+.header-nav,
+ul {
+  display: flex;
 }
 
-div.banner{
-    display: flex;
+ul.service-options {
+  width: 70%;
+  justify-content: space-evenly;
+  list-style: none;
+  flex-wrap: wrap;
 }
 
-div.banner img{
-    width: 100%;
+.container-barMenu {
+  width: max-content;
+  margin: auto;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #26314D;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
+
+.container-barMenu i{
+    color: white;
+}
+
+ul.user-options {
+  width: 30%;
+  list-style: none;
+  justify-content: stretch;
+  flex-wrap: wrap;
+}
+
+div.banner {
+  display: flex;
+}
+
+div.banner img {
+  width: 100%;
+}
+
 
 @media (min-width: 320px) {
-    .header-nav{
+    .header-nav {
         display: none;
-    }
-}
+      }
+      .header-nav,ul {
+        flex-direction: column;
+        align-content: center;
+      }
+      
+}  
 
 @media (min-width: 560px) {
-    .header-nav{
-        display: flex;
-    }
+  .header-nav {
+    display: flex;
+  }
+
+  .container-barMenu{
+      display: none;
+  }
+
+  .header-nav,ul {
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
 }
